# rust-fast-math

./: .gitignore  CMakeLists.txt  README.md
demangle/: Cargo.toml
demangle/src/: lib.rs
src/: helper.cpp  helper.h  main.cpp  passwrapper.cpp  passwrapper.h  rustwrapper.cpp  rustwrapper.h
tests/floatmethods/: Cargo.toml
tests/floatmethods/src/: lib.rs
tests/llvm-ir/: debug.ll  floatmethods.ll  legacy.ll  pre-fast.ll  release.ll  v0.ll
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs
